# TranslationZed-py

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pydocstyle  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  mutation-promotion-readiness.yml  release-dry-run.yml  release.yml
.tzp-config/: settings.env
config/: app.toml  ci.yaml
docs/: architecture_overview.md  checklists.md  docs_structure.md  flows.md  implementation_plan.md  index.md  llm_handoff_summary.md  llm_handoff_summary_16-07-2025.md  technical_notes_current_state.md  testing_strategy.md  tm_ranking_algorithm.md  translation_zed_py_technical_specification.md  translation_zed_py_use_case_ux_specification.md
scripts/: _common.sh  arch_check.sh  bench.sh  bench_check.sh  check.sh  check_architecture_guards.py  check_benchmark_regression.py  check_mutation_promotion.py  check_mutation_promotion_ci.py  ci_deps_linux.sh  clean.sh  clean_cache.sh  clean_config.sh  diagnose_encoding.sh  dist.sh  docs_build.sh  docstyle.sh  encoding_diagnostics.py  fmt.sh  fmt_check.sh  install.sh  lint.sh  lint_check.sh  mutation.sh  mutation_stage.py  mutation_summary.py  pack.ps1  pack.sh  perf_scenarios.py  perf_scenarios.sh  precommit.sh  prune_bundle.ps1  prune_bundle.sh  release_check.py  release_check.sh  reset_conflict_fixtures.sh  run.sh  security.sh  test.sh  test_cov.sh  (+7 more)
tests/: conftest.py  test_app_config.py  test_architecture_guard.py  test_atomic_io.py  test_benchmark_regression_script.py  test_conflict_service.py  test_core_search.py  test_crash_recovery.py  test_delegates_behaviors.py  test_delegates_visual_theme.py  test_en_diff_service.py  test_en_diff_snapshot.py  test_en_hash_cache.py  test_en_insert_plan.py  test_encoding_diagnostics.py  test_entry_model_en_diff.py  test_entry_model_helpers.py  test_entry_model_source.py  test_file_workflow.py  test_fmt_scripts.py  test_fs_model.py  test_golden_roundtrip.py  test_golden_structure.py  test_gui_about_dialog.py  test_gui_app_launch.py  test_gui_conflicts.py  test_gui_dialogs.py  test_gui_edit_save.py  test_gui_no_locale.py  test_gui_perf_regressions.py  test_gui_qa_panel.py  test_gui_readonly_integrity.py  test_gui_save_encoding.py  test_gui_save_prompt.py  test_gui_search.py  test_gui_service_adapters.py  test_gui_smoke.py  test_gui_theme.py  test_gui_tm_preferences.py  test_languagetool.py  (+71 more)
tests/benchmarks/: baseline.json  (+1 more)
translationzed_py/: __init__.py  __main__.py  version.py
(+109 files in other folders)
