[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "translationzed_py"
version         = "0.6.0"
description     = "Python + Qt CAT tool for Project Zomboid localisation files."
requires-python = ">=3.10"
authors         = [ { name = "TranslationZed‑Py team" } ]
license         = "GPL-3.0-only"
license-files   = ["LICENSE"]
readme          = "README.md"

# Runtime deps — keep minimal
dependencies = [
    "PySide6>=6.6",          # Qt 6 bindings for Python
    "xxhash>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "pytest>=8.4",
    "pytest-qt>=4.4",
    "pre-commit>=3.6",
    "build>=1.2",
    "wheel>=0.46",
    "PySide6-stubs>=2.1",
]
packaging = [
    "pyinstaller>=6.3",
]

[project.scripts]
tz = "translationzed_py.__main__:main"

[tool.setuptools.packages.find]
include = ["translationzed_py*"]
exclude = ["config*", "docs*", "scripts*", "tests*", "build*", "dist*"]

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true

[[tool.mypy.overrides]]
module = "translationzed_py.gui.*"
ignore_errors = true       # GUI code uses Qt – relax the checker here

[tool.pytest.ini_options]
addopts = "-ra -q"
